# ClariMIDI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  tusb_config.h
3D/: Body_V2-BackBody.3mf  Body_V2.3mf  Body_V2.FCStd  BreathSensorV3.3mf  BreathSensorV3.FCStd  KeyStem-Body.3mf  KeyStem.FCStd  Key_Register.3mf  Key_Register.FCStd  SensorRack.3mf  SensorRack.FCStd  SensorRackScrew.3mf  SwitchBoxes-DoubleBody.3mf  SwitchBoxes-QuadBody.3mf  SwitchBoxes-SingleBody.3mf  SwitchBoxes-TripleBody.3mf  SwitchBoxes.FCStd
CircuitPython/: boot.py  main.py
docs/: .~lock.Connections.ods#  Connections.ods  index.md
src/: ClariMIDI.c  breath.c  breath.h  config.h  display.c  display.h  keys.c  keys.h  menu.c  menu.h  midi.c  midi.h  usb_descriptors.c
